cmd/gas-feeder/k8s/02-gas-feeder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gas-feeder
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gas-feeder
  template:
    metadata:
      labels:
        app: gas-feeder
    spec:
      containers:
        - name: gas-feeder
          image: uhub.service.ucloud.cn/entropypool/gas-feeder:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/GasFeeder
      volumes:
        - name: service-config
          configMap:
            name: gas-feeder-config
            items:
              - key: service-conf
                path: GasFeeder.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gas-feeder
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50320
      targetPort: 50320
    - name: grpc
      port: 50321
      targetPort: 50321
    - name: prometheus
      port: 50322
      targetPort: 50322
  selector:
    app: gas-feeder
